# total-recall-claude-code

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
hooks/: on-session-start.py  on-session-stop.py
lib/: __init__.py  recall_db.py  session_parser.py  team_config.py  team_recall_client.py
tests/: test_recall.py
tools/: check-team-memory.py  promote-lesson.py  recall-list.py  recall-search.py  team-recall-search.py
